start on about me page

--- a/competition.html
+++ b/competition.html
@@ -138,7 +138,7 @@
                                 <h5>Some other competitions I've joined before...</h5> 
                                 <p class = "bodytxt"> 
                                     Ardingly College: </br>
-                                    Chemsitry Olympiad (hosted by the Royal Society of Chemistry) 
+                                    Chemsitry Olympiad (hosted by the Royal Society of Chemistry)</br> 
                                     Physics Olympiad (hosted by the <a href="https://www.bpho.org.uk/">British Physics Olympiad</a>)</br> 
                                     Google Science Competition </br> 
                                     Interschool Football Competitions (3rd, 4th and 5th football teams)</br>
