about us page rethink?

--- a/research.html
+++ b/research.html
@@ -111,12 +111,14 @@
                         <p class = "bodytxt"> 
                             Supervisor: <a href="http://www.homepages.ucl.ac.uk/~ucanfkr/index.html"> Dr. Frank Kruger</a> </br></br>
                            
-                            Abstract:</br> A 1D S=1/2 spin chain with alternating FM and AFM couplings is investigated. The topological phase boundary is
-                            determined as a function of the relative strength of the exchange coupling and the magnetic exchange anisotropy. In
-                            the regime where FM coupling dominates, it becomes a Haldane spin chain, exhibiting topological order, hence will be
-                            stable against small perturbations. Interactions of this regime is treated in a mean-field approximation, requiring to solve
-                            coupled self-consistency equations numerically using Python and Mathematica. In the limit of strong anisotropy, the
-                            fermions will be non-interacting and is exactly solvable.
+                            Abstract:</br> A 1D S=1/2 spin chain with alternating FM and AFM couplings is investigated in the limit of small
+                            magnetic anisotropy. The model is treated in terms of a simple nearest-neighbour hamiltonian, then performing a Jordan-Wigner 
+                            transformation to map the spin 1/2 operators to spinless fermions. 
+                            In the regime of strong anisotropy (XY case), fermions will be non-interacting and is exactly solvable. The model will be equivalent to
+                            a Haldane spin chain, exhibiting topological order, hence will bestable against small perturbations.
+                            Interactions of the studied regime is treated in a mean-field approximation, requiring to solve
+                            coupled self-consistency equations numerically using Python and Mathematica. 
+                            The topological phase boundary is determined numerically using a bisection method as a function of the relative strength of the exchange coupling and the magnetic exchange anisotropy.
                         </br></br>
                         <!-- See Report</br>
                         See Detailed Appendix</br>
