--- a/research.html
+++ b/research.html
@@ -91,7 +91,7 @@
                             Brief overview:</br> 
                             I will be doing a literature review project on tensor networks and its usage in strongly correlated 
                             systems throughout the course of my final year.</br></br>
-                            The title and other specifics of the project will be updated.
+                            The title and other specifics of the project will be updated later.
                         </p>
                 </table>
                 </td >
@@ -115,14 +115,12 @@
                             magnetic anisotropy. The model is treated in terms of a simple nearest-neighbour hamiltonian, then performing a Jordan-Wigner 
                             transformation to map the spin 1/2 operators to spinless fermions. 
                             In the regime of strong anisotropy (XY case), fermions will be non-interacting and is exactly solvable. The model will be equivalent to
-                            a Haldane spin chain, exhibiting topological order, hence will bestable against small perturbations.
+                            a Haldane spin chain, exhibiting topological order, hence will be stable against small perturbations.
                             Interactions of the studied regime is treated in a mean-field approximation, requiring to solve
                             coupled self-consistency equations numerically using Python and Mathematica. 
                             The topological phase boundary is determined numerically using a bisection method as a function of the relative strength of the exchange coupling and the magnetic exchange anisotropy.
                         </br></br>
-                        <!-- See Report</br>
-                        See Detailed Appendix</br>
-                        See notes i made</br> -->
+                        A one page report is written as a summary, with a more detailed appendix explaining the steps I took.
                         </p>
                 </table> <br />
             </td >  
