--- a/index.html
+++ b/index.html
@@ -65,8 +65,14 @@
             &nbsp
             <a href="mailto:zcqsptl@ucl.ac.uk"><img src="./Pics/Microsoft_Outlook-Logo.wine.png" alt="outlook" width="32" height="30"></a>
             &nbsp&nbsp
-            <a href="https://github.com/SavitarRL"><img src="./Pics/GitHub-Mark-64px.png" alt="githubmark" width="35" height="35">
+            <a href="https://github.com/SavitarRL"><img src="./Pics/GitHub-Mark-64px.png" alt="githubmark" width="35" height="35"></a>
+            
+            <p style="text-align:center;"><br/>
+                <br/>
+                <a>CV</a>
+            </p>
         </div>
+        
     </td>
 
     <td valign="top">
