--- a/notes.html
+++ b/notes.html
@@ -80,7 +80,7 @@
                 <br />
                 Some notes are not here, either its not with me physically to scan or I lost it somewhere (:<). I will update the notes once every 6 months.
                 <br />
-                Some of the stuff might be wrong, so if there are changes or corections to be made, please feel free to contact me. Thanks :>!
+                Some of the stuff might be wrong, so if there are changes or corrections to be made, please feel free to contact me. Thanks :>!
             </p>
         
         <td> 
