--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <div>
     <h1><b><span class='notbold'>Lau Pak To (Ryan)</span></b></h1>
-    <h2>Bsc Natural Sciences Student </h2>
+    <!-- <h2>Bsc Natural Sciences Student </h2> -->
     <!-- add image or banner or sth -->
     <!-- <h3>Major: Physics, Minor:Physical Chemistry</h3> -->
 </div>
@@ -55,8 +55,9 @@
             <tr>
             <td width="14" height="30"><a href="notes.html">Notes</a></td>
             </tr>
-            <tr>
-            <!-- <td width="14" height="30"><a href="teaching.html">Teaching & Tutoring</a></td> -->
+            <tr border="1">
+            <td width="14" height="30" ><a>My CV</a></td>    
+                <!-- <td width="14" height="30"><a href="teaching.html">Teaching & Tutoring</a></td> -->
             </tr>
         </table>
         <div>
@@ -67,10 +68,10 @@
             &nbsp&nbsp
             <a href="https://github.com/SavitarRL"><img src="./Pics/GitHub-Mark-64px.png" alt="githubmark" width="35" height="35"></a>
             
-            <p style="text-align:center;"><br/>
+            <!-- <p style="text-align:center;"><br/>
                 <br/>
-                <a>CV</a>
-            </p>
+                <a>My CV</a>
+            </p> -->
         </div>
         
     </td>
