--- a/notes_2_phy_AM.html
+++ b/notes_2_phy_AM.html
@@ -29,8 +29,15 @@
     <!-- <h3>Major: Physics, Minor:Physical Chemistry</h3> -->
 </div>
 
+<div>
+    <h1><b><span class='notbold'>Lau Pak To (Ryan)</span></b></h1>
+    <!-- <h2>Bsc Natural Sciences Student </h2> -->
+    <!-- add image or banner or sth -->
+    <!-- <h3>Major: Physics, Minor:Physical Chemistry</h3> -->
+</div>
+
 <table width="1100"  table-layout=fixed border="0" cellpadding="0" cellspacing="0" bgcolor="#EEF5FD">
-    <td width="300" valign="top" height="500">
+    <td width="200" valign="top" height="500">
         <img src="Prof pic crop.jpg" width="180" height="210" hspace="0" vspace="0" />
         <table border="0" cellspacing="0" cellpadding="0" width="175"  >
             <tr>
@@ -54,9 +61,10 @@
             <tr>
             <td width="14" height="30"><a href="notes.html">Notes</a></td>
             </tr>
-            <!-- <tr>
-            <td width="14" height="30"><a href="teaching.html">Teaching & Tutoring</a></td>
-            </tr> -->
+            <tr border="1">
+            <td width="14" height="30" ><a>My CV</a></td>    
+                <!-- <td width="14" height="30"><a href="teaching.html">Teaching & Tutoring</a></td> -->
+            </tr>
         </table>
         <div>
             <h5><strong>contacts</strong></h5>
