--- a/research.html
+++ b/research.html
@@ -121,7 +121,7 @@
                             coupled self-consistency equations numerically using Python and Mathematica. 
                             The topological phase boundary is determined numerically using a bisection method as a function of the relative strength of the exchange coupling and the magnetic exchange anisotropy.
                         </br></br>
-                        A one page report is written as a summary, with a more detailed appendix explaining the steps I took.
+                        A one page <a href="./Research/qTPT/qTPT_main_RyanLau_edited.pdf">report</a> is written as a summary, with a more detailed <a href="./Research/qTPT/qTPT_appendix_RyanLau_edited.pdf">appendix </a>explaining the steps I took.
                         </p>
                 </table> <br />
             </td >  
