--- a/index.html
+++ b/index.html
@@ -107,18 +107,18 @@
                         <strong>Research Interests</strong>
                    
                         <p> <br />
-                            Strongly correlated systems, topological phases, tensor networks, quantum field theory,  computational methods, machine learning...
+                            Strongly correlated systems, topological phases, tensor networks, quantum field theory,  mathematical physics, computational methods, machine learning...
                         </p>
                         <br />
 
                         <strong>Research</strong>
                    
                         <p> <br />
-                            Tensor Networks in strongly correlated systems;<br />
+                            Classifying Topological Phases of Quantum Matter using Tensor Networks<br />
                             <br />
-                            Topological Phase Transition in S=1/2 spin chains with alternating ferromagnetic (FM) and antiferromagnetic </br>(AFM) couplings and exchange anisotropy;<br />
+                            Topological Phase Transition in S=1/2 spin chains with alternating ferromagnetic (FM) and antiferromagnetic </br>(AFM) couplings and exchange anisotropy<br />
                             <br />
-                            The 3-Colored Distributive Consensus Problem; <br />
+                            The 3-Colored Distributive Consensus Problem <br />
                             <br />
                             Machine Learning in Stock Markets
                         </p>
@@ -146,7 +146,7 @@
                             <br />Summer research student at <a href="https://education.wolfram.com/summer-school/programs/physics/">Wolfram Summer School, Fundamental Physics Track</a>,
                             <br />Wolfram Research (June 2021 - July 2021)<br />
                             <br />Research Assistant/Mentee in the <a href="https://uclconnectedsociety.weebly.com/research-mentorship-programme.html">UCL Connect.ed Mentorship Programme</a> (Jan 2021 - Apr 2021)<br />
-                            <br />Physics & Mathematics Private Tutor (June 2020 - Sept 2020) <br />
+                            <br />Physics & Mathematics Private Tutor (Summer 2019, 2020) <br />
 
                         </p><br />
 
