--- a/research.html
+++ b/research.html
@@ -82,7 +82,7 @@
                 <tr>
                 <td valign="top"> 
                 <table width="900" height="auto" border="0">
-                        <h3>Tensor Networks and Strongly Correlated Systems</h3> 
+                        <h3>Classifying Topological Phases of Quantum Matter using Tensor Networks</h3> 
                         <br />
                         A literature review research project as a part of my Natural Sciences degree</a></br></br>
                         <!-- <p style="text-align:center;"><img src="./Projects/20210916_171908.jpg" alt="birds by koufu" width = 45% ></p> -->
@@ -92,7 +92,7 @@
                             Brief overview:</br> 
                             I will be doing a literature review project on tensor networks and its usage in strongly correlated 
                             systems throughout the course of my final year.</br></br>
-                            The title and other specifics of the project will be updated later.
+                        
                         </p>
                 </table>
                 </td >
