updated research and projects

--- a/notes.html
+++ b/notes.html
@@ -101,7 +101,7 @@
                             <br />
                             Electromagnetic Theory (PHAS 0038)
                             <br />
-                            <!-- Nuclear & Particle Physics (PHAS 0040) -->
+                            Solid State Physics (PHAS 0041)
                             <br />
                             Theory of Dynamical Systems (PHAS 0049)
                         </p>
