--- a/projects.html
+++ b/projects.html
@@ -108,6 +108,33 @@
                 </tr> 
             </div>
             
+            <div>
+                <table width="400" height="auto" border="0">
+                <tr>
+                    <td valign="top"> 
+                        <table width="900" height="auto" border="0">
+                                <h3>Machine Learning in Stock Markets</h3> 
+                                <br />
+                                A research project as a part of the <a href="https://uclconnectedsociety.weebly.com/research-mentorship-programme.html"> UCL Connect.ed Mentorship Programme</a>.
+                                <p class = "bodytxt"> 
+                                    Supervisor: <a href="https://www.linkedin.com/in/ava-lee-99062998/?originalSubdomain=uk"> Dr. Ava Lee</a> </br></br>
+                                    Brief overview: </br>
+                                    In a team of 9, we used machine learning (ML) techniques to predict stock market trends. 
+                                    In the beginning, I had a crash course in Machine Learning by trying to predict house prices. I then wrote a literature review 
+                                    on ML implemented in stock markets to gain more insights about the problem by researching on recent findings and techniques regarding ML.
+                                    In the process, I have learnt the concepts of different ML methods, such as Support-Vector Machines and Recursive Neural Networks. 
+                                    My team and I assisted in collecting data from some well known APIs. We also implemented pre-trained Natural Language Processing (NLP) models as a part of our training data.
+                                    Python and Jupyter Notebooks are used throughout the project.
+                                </br></br>
+                           
+                                Credits: Ava Lee, Samuel Brian, Tidan Balasingam, Ryan Lau, Alessandra Quigley, Amelia Morgan-Gumm, I Cheng, Bohdan Glisevic
+                                </br></br>
+                                </p>
+                        </table> <br />
+                    </td >  
+                    </table>
+                </td >  
+                </tr></div>
 
             <div>
                 <table width="400" height="auto" border="0">
