update again, final checks these days

--- a/research.html
+++ b/research.html
@@ -150,7 +150,7 @@
                         <table width="900" height="auto" border="0">
                                 <h3>The 3-Coloured Distributive Consensus Problem</h3> 
                                 <br />
-                                A summer research project on Cellular Automata, as a part of the <a href="https://www.wolframphysics.org/">"Wolfram Physics Project</a> and <a href="https://education.wolfram.com/summer-school/programs/physics/">Wolfram Summer School: Fundamental Physics Track 2021</a>.
+                                A summer research project on Cellular Automata, as a part of the <a href="https://www.wolframphysics.org/">Wolfram Physics Project</a> and <a href="https://education.wolfram.com/summer-school/programs/physics/">Wolfram Summer School: Fundamental Physics Track 2021</a>.
                                 <p style="text-align:center;"><img src="./Research/3 color/main.PNG" alt="3col model" width = 450 height=150 ><img src="./Research/3 color/main2.PNG" alt="3col model2" width = 450 height=150 ></p>
                                 <p class = "bodytxt"> 
                                     Supervisor: <a href="https://www.wolframphysics.org/people/hatem-elshatlawy/">Hatem Elshatlawy</a> </br></br>    
