--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                             <p><br />
                                 Intermediate: Python, Mathematica, MATLAB <br />
                                 Novice: C, C++, Julia<br />
-                                Learning: HTML, CSS, Javascript
+                                Learning: HTML, CSS, Java
                             </p>
                             <br />
                     
