--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
                         </p><br />
 
-                    <strong>Projects</strong>
+                    <strong>Some other projects</strong>
                     <p> <br />
                         Bird Song Audio Analysis, Molecular and Business Modelling in Science,  ML in Stock Market, Quantum Chemistry with an application in Drug Design
                     </p><br />
