--- a/notes.html
+++ b/notes.html
@@ -81,7 +81,9 @@
                 <br />
                 Some notes are not here, either its not with me physically to scan or I lost it somewhere (:<). I will update the notes once every 6 months.
                 <br />
-                Some of the stuff might be wrong, so if there are changes or corrections to be made, please feel free to contact me. Thanks :>!
+                These notes are incomplete. Some of the stuff might be wrong. Please do not redistribute these notes.
+                <br />
+                If you would want a copy of some of these notes, or there are changes or corrections to be made, please feel free to contact me. Thanks :>!
             </p>
         
         <td> 
