uncommented CV section

--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en-gb">
 <!-- ty michael reeves, jma and dr. kruger -->
 <head>
@@ -204,4 +204,4 @@
     
     </body>
     </html>
-    
+     -->
