--- a/research.html
+++ b/research.html
@@ -92,20 +92,7 @@
                             Supervisor: <a href="https://www.ucl.ac.uk/physics-astronomy/people/professor-andrew-green"> Professor Andrew Green</a></br></br>
                            
                             Project brief:</br> 
-                            Spontaneous symmetry breaking has been used to classify conventional phases of matter. A symmetry change within
-                            a material is what leads to a phase transition. However, there is a new state of quantum matter which cannot be
-                            characterised using symmetry breaking. This kind of quantum matter exhibits topological order, such as the fractional
-                            Quantum Hall effect and the Haldane integer spin chain model. Their topological orders are preserved under some
-                            perturbations. Characterising the topological orders of these models or other materials poses a challenge. It has
-                            been found that Tensor Networks (TNs) are effective tools in describing, computing and characterising these kinds of
-                            different topological phases. TNs are mathematical objects which are used to represent entangled many-body complex
-                            quantum systems, and is an area of active interdisciplinary research.
-                            This review aims to address the how different topological phases of quantum matter are classified using TNs. The
-                            review will start with introducing commonly used TNs, such as the 1D Matrix Product States (MPS) and the 2D
-                            Projected Entangled Pair States (PEPS). Next, the review will discuss the characterisation of different topological
-                            orders, and how TN methods help with classifying these phases of matter. Subsequently, the review will examine how
-                            topological phase transitions are identified using TNs in quantum computations with a discussion of error mitigation
-                            using the toric code.
+                            Spontaneous symmetry breaking has been used to classify conventional phases of matter. Phase transitions are caused by symmetry changes. However, there is a new state of quantum matter which cannot be characterised using symmetry breaking. This kind of quantum matter exhibits topological order, such as the fractional Quantum Hall effect and the Haldane integer spin chain model. Their topological orders are preserved under some perturbations. It has been found that Tensor Networks (TNs) are effective tools in describing, computing, realising and characterising these kinds of different topological phases. TNs are mathematical objects which are used to represent entangled many-body complex quantum systems, and is an area of active interdisciplinary research. This review aims to address how different topological phases of quantum matter are classified using TNs. The review will start with introducing the concept of topology classically and its analogy with topological order in quantum matter. Then, commonly used TNs, such as Matrix Product States (MPS) and the Projected Entangled Pair States (PEPS) will be discussed. Next, the review will go into how TN methods characterise topological ordered states, while focusing on symmetry protected topological order (SPT). Finally, the review will bring up the implications and uses of TNs and topological quantum matter in quantum information and technologies.
                             </br></br>
                         
                         </p>
