--- a/research.html
+++ b/research.html
@@ -156,7 +156,7 @@
                                     A general majority rule has been hypothesised and studied using grid cellular automata and Mathematica, in cases of 2 and 3 colors. 
                                 </br>
                                 </br>
-                                    Link for the report, featured in Wolfram Community: <a href="https://community.wolfram.com/groups/-/m/t/2312007">https://community.wolfram.com/groups/-/m/t/2312007</a>
+                                    Link for the report, featured in the Wolfram Community, with a staff picked Featured Contributor Badge: <a href="https://community.wolfram.com/groups/-/m/t/2312007">https://community.wolfram.com/groups/-/m/t/2312007</a>
                                 </br></br>
                                 <!-- See Report</br>
                                 See Detailed Appendix</br>
