update research interests

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         <strong>Research Interests</strong>
                    
                         <p> <br />
-                            Strongly correlated systems, topological phases, tensor networks, quantum field theory,  mathematical physics, computational methods, machine learning...
+                            Strongly correlated systems, topological phases, tensor networks, quantum information and computation, quantum field theory, mathematical physics, computational methods, machine learning...
                         </p>
                         <br />
 
