--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <table width="800" border="0" hspace = "10" cellpadding="0" cellspacing="0" bgcolor="#EEF5FD">
         <h5>TLDR</h5> 
             <p>
-                I am a Natural Sciences graduate majoring in Physics & minoring in Physical Chemistry, studying in University College London (UCL).
+                I am a recent Natural Sciences graduate from University College London (UCL), majoring in Physics & minoring in Physical Chemistry. 
                 Being extremely interested in Physics, I am motivated to pursue a career in academic research, hoping 
                 to further my research in theoretical condensed matter physics and quantum tachnologies. <br /> <br />
                 
