--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
                         <br />
                         <strong>Summer Schools</strong>
                     <p> <br />
+                        <a href="https://qiskit.org/events/summer-school/">Qiskit Global Summer School 2022:</a> Quantum Simulations (July 2022 - Aug 2022)<br /><br />
                         <a href="https://www.ucl.ac.uk/quantum/">UCLQ</a> Quantum Technologies Summer School (July, 2022) <br/>
                         <br /><a href="https://education.wolfram.com/summer-school/programs/physics/">Wolfram Summer School</a> Fundamental Physics Track <br />(June 2021-July 2021)
                     
