--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <table width="400">
                     
                         <strong>Education</strong>
-                        <br />
+                        <br /><br />
                         <p class = "bodytxt"> 
                             (Sept 2022 - Present) <a href= "https://www.ucl.ac.uk/" target="_blank">University College London (UCL)</a><br />
                             MSc Physics
@@ -163,13 +163,13 @@
 
                     <strong>Work experience</strong>
                         <p> <br />
-                            Research Intern at <a href="https://www.imperial.ac.uk/civil-engineering/">Faculty of Engineering, Department of Civil and Environmental Engineering, Imperial College London (Aug 2022-Present)</a><br />
+                            Research Intern at <a href="https://www.imperial.ac.uk/civil-engineering/">Faculty of Engineering, Department of Civil and Environmental Engineering</a>, Imperial College London (Aug 2022-Present)<br />
                             <br />Research Intern at <a href="https://www.ucl.ac.uk/mathematical-physical-sciences/">MAPS</a>, UCL (June 2022 - Present) <br/>
                             <br />Research Intern at <a href="https://www.ucl.ac.uk/condensed-matter-material-physics/">CMMP</a>, UCL (June 2021 - Aug 2021) <br/>
                             <br />Summer research student at <a href="https://education.wolfram.com/summer-school/programs/physics/">Wolfram Summer School, Fundamental Physics Track</a>,
                             <br />Wolfram Research (June 2021 - July 2021)<br />
                             <br />Research Assistant/Mentee in the <a href="https://uclconnectedsociety.weebly.com/research-mentorship-programme.html">UCL Connect.ed Mentorship Programme</a> (Jan 2021 - Apr 2021)<br />
-                            <br />Physics & Mathematics Private Tutor (Sept 2022 - Present, Summer 2019, 2020) <br />
+                            <br />Physics, Mathematics & Chemistry Private Tutor (Sept 2022 - Present, Summer 2019, 2020) <br />
 
                         </p><br />
                     
