--- a/research.html
+++ b/research.html
@@ -110,7 +110,7 @@
                             <h3>Quantum Simulations of Antigen-Antibody reactions </h3> 
                             <br />
                             An interdisciplinary research project on bioinformatics, computational biophysics and quantum technologies, as a part of my research internship within the <a href="https://www.imperial.ac.uk/civil-engineering/">Faculty of Engineering, Department of Civil and Environmental Engineering</a>, Imperial College London.
-                            <br /> <u>August 2022 - Present (ongoing)</u> <br/>
+                            <br /> <u>August 2022 - September 2022</u> <br/>
                             <p style="text-align:center;"><img src="./Research/antigen research/antigenantibody.png" alt="qtpt model" width = 50% ></p>
                             <p style="text-align:center;">Image from: Chang, T.-C., Wu, C.-C., Wang, S.-C., Chau, L.-K. &amp; Hsieh, W.-H. Using a fiber optic particle plasmon resonance biosensor to determine kinetic constants of antigen–antibody binding reaction. Analytical Chemistry 85, 245–250 (2012). 
                                 </p></br>
@@ -135,7 +135,7 @@
                             <h3>Q-Wave: Simulating sound waves using Quantum Algorithms</h3> 
                             
                             An interdisciplinary research project on sound wave propagation and quantum technologies, as a part of my research internship within the <a href="https://www.ucl.ac.uk/mathematical-physical-sciences/">MAPS</a> Faculty, UCL</a>
-                            <br /> <u>June 2022 - Present (ongoing)</u> <br/>
+                            <br /> <u>June 2022 - September 2022</u> <br/>
                             <p style="text-align:center;"><img src="./Research/wave-problem-model.png" alt="qtpt model" width = 25% ></p>
                             <p style="text-align:center;">Image from: P.C.S. Costa, S. Jordan, and A. Ostrander, Quantum algorithm for simulating the wave equation, Phys Rev. A 99, 012323 (2019).</p></br>
                             <p class = "bodytxt"> 
