--- a/competition.html
+++ b/competition.html
@@ -121,6 +121,10 @@
                             <table width="900" height="auto" border="0">
                                 <h5>Some other competitions I've joined before...</h5> 
                                 <p class = "bodytxt"> 
+                                    UCL </br>
+                                    Explore your entrepreneurial idea Pitching  Competition (Oct 2022), University Physics Competition 2020</br>
+                                    Inter-university Football competitions </br>
+                                </br></br> 
                                     Ardingly College: </br>
                                     Chemsitry Olympiad (hosted by the Royal Society of Chemistry)</br> 
                                     Physics Olympiad (hosted by the <a href="https://www.bpho.org.uk/">British Physics Olympiad</a>)</br> 
