--- a/competition.html
+++ b/competition.html
@@ -105,8 +105,8 @@
                                 be depending on the direction of the wind and the movement of the drone itself. The paper concludes
                                 with the indication of limitations, conclusions and future works.
                             </br></br>
-                            The paper is being editted at the moment and will be published in arXiv.
-                            </br></br>
+                            <!-- The paper is being editted at the moment and will be published in arXiv.
+                            </br></br> -->
                             Credits: Marcel Mordarski, Louis Sharma, Ryan Lau
                             </p>
                     </table> <br />
