finalise and double check

--- a/index.html
+++ b/index.html
@@ -80,9 +80,8 @@
     <table width="800" border="0" hspace = "10" cellpadding="0" cellspacing="0" bgcolor="#EEF5FD">
         <h5>TLDR</h5> 
             <p>
-                I am currently a Masters student in Physics and a recent Natural Sciences graduate (Physics & Physical Chemistry) from University College London (UCL).
-                Being extremely interested in Physics, I am motivated to pursue a career in academic research, hoping 
-                to further my research in theoretical condensed matter physics and quantum technologies. <br /> <br />
+                I am currently a Masters student in Physics and a recent Natural Sciences graduate (Physics & Physical Chemistry) at University College London (UCL).
+                Being extremely interested in Physics and technology, I am pursuing a career in scientific research, specialising in theoretical condensed matter physics and quantum technologies. <br /> <br />
                 
             </p>
             <h2>Brief CV</h2>
@@ -152,15 +151,15 @@
                     
                     <strong>Programming</strong>
                             <p><br />
-                                Intermediate: Python, Mathematica, MATLAB <br />
-                                Novice: C, C++, Julia<br />
-                                Learning: HTML, CSS, QASM 2.0, C#(Unity)
+                                Intermediate: Python, Mathematica, MATLAB, C++ <br />
+                                Novice: C, Julia<br />
+                                Learning: HTML, CSS
                             </p>
                             <br />
 
                     <strong>Quantum Technologies/Platforms</strong>
                     <p><br />
-                        Qiskit, Cirq, IBM Quantum Composer, IBM Quantum Lab, D-Wave Leap (Quantum Annealer)
+                        Qiskit, Cirq, QASM 2.0, IBM Quantum Composer, IBM Quantum Lab, D-Wave Leap (Quantum Annealer)
                     </p>
                     <br />
 
