--- a/research.html
+++ b/research.html
@@ -115,6 +115,7 @@
                                 fault tolerant quantum computers will help solve many problems much more efficiently that
                                 classical ones, such as optimisation problems, quantum machine learning, quantum
                                 chemistry, drug discovery many-body physics problems. </br> </br> 
+                                The project will include a model derivation and a quantum computational test on noise mitigation and error correction.
                                 A literature review and a dissertation will be written.
                             </br> 
                                 
@@ -191,7 +192,8 @@
                                 Project Brief:</br> 
                                 Wave equations are well-known to describe physical waves. In this research, we hope to solve a particular form of the wave equation,
                                 known as the Helmholtz equation, in 2 dimensions. We will be using the <a href="https://arxiv.org/abs/0811.3171"> HHL algorithm</a> to solve the equation in the frequency domain. </br> 
-                                At the end of the project, a report will be written, a paper will be submitted to a peer-reviewed journal and a first version of a wave solver, written in Python, will be published.
+                                A one page <a href="./Research/Qwave/Q_Wave__summer_2022_reportfinal.pdf"> report</a> is written as a summary. 
+                                A software package written in Python, named "QWave", is in its initial developmental stage and is yet to be published for public use.
                             </p>
                     </table> <br />
                 </td >  
