--- a/index.html
+++ b/index.html
@@ -152,8 +152,7 @@
                     <strong>Programming</strong>
                             <p><br />
                                 Intermediate: Python, Mathematica, MATLAB, C++ <br />
-                                Novice: C, Julia<br />
-                                Learning: HTML, CSS
+                                Novice: C, Julia, HTML, CSS<br /> 
                             </p>
                             <br />
 
