--- a/research.html
+++ b/research.html
@@ -192,7 +192,7 @@
                                 Project Brief:</br> 
                                 Wave equations are well-known to describe physical waves. In this research, we hope to solve a particular form of the wave equation,
                                 known as the Helmholtz equation, in 2 dimensions. We will be using the <a href="https://arxiv.org/abs/0811.3171"> HHL algorithm</a> to solve the equation in the frequency domain. </br> 
-                                A one page <a href="./Research/Qwave/Q_Wave__summer_2022_reportfinal.pdf"> report</a> is written as a summary. 
+                                A <a href="./Research/Qwave/Q_Wave__summer_2022_reportfinal.pdf"> report</a> is written as a summary. 
                                 A software package written in Python, named "QWave", is in its initial developmental stage and is yet to be published for public use.
                             </p>
                     </table> <br />
