--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <h5>TLDR</h5> 
             <p>
                 I am currently a Masters student in Physics and a recent Natural Sciences graduate (Physics & Physical Chemistry) at University College London (UCL).
-                Being extremely interested in Physics and technology, I am pursuing a career in scientific research, specialising in theoretical condensed matter physics and quantum technologies. <br /> <br />
+                Being extremely interested in Physics and technology, I am pursuing a career in scientific research, specialising in quantum technologies and theoretical condensed matter physics. <br /> <br />
                 
             </p>
             <h2>Brief CV</h2>
@@ -151,14 +151,14 @@
                     
                     <strong>Programming</strong>
                             <p><br />
-                                Intermediate: Python, Mathematica, MATLAB, C++ <br />
+                                Intermediate: Python, Mathematica, C++, MATLAB<br />
                                 Novice: C, Julia, HTML, CSS<br /> 
                             </p>
                             <br />
 
                     <strong>Quantum Technologies/Platforms</strong>
                     <p><br />
-                        Qiskit, Cirq, QASM 2.0, IBM Quantum Composer, IBM Quantum Lab, D-Wave Leap (Quantum Annealer)
+                        Qiskit, QASM 2.0, IBM Quantum Composer, IBM Quantum Lab, D-Wave Leap (Quantum Annealer)
                     </p>
                     <br />
 
@@ -166,7 +166,7 @@
                     <strong>Work experience</strong>
                         <p> <br />
                             Research Intern at <a href="https://www.imperial.ac.uk/civil-engineering/">Faculty of Engineering, Department of Civil and Environmental Engineering</a>, Imperial College London (Aug 2022-Sept 2022)<br />
-                            <br />Research Intern at <a href="https://www.ucl.ac.uk/mathematical-physical-sciences/">MAPS</a>, UCL (June 2022 - Sept 2022 <br/>
+                            <br />Research Intern at <a href="https://www.ucl.ac.uk/mathematical-physical-sciences/">MAPS</a>, UCL (June 2022 - Sept 2022) <br/>
                             <br />Research Intern at <a href="https://www.ucl.ac.uk/condensed-matter-material-physics/">CMMP</a>, UCL (June 2021 - Aug 2021) <br/>
                             <br />Summer research student at <a href="https://education.wolfram.com/summer-school/programs/physics/">Wolfram Summer School, Fundamental Physics Track</a>,
                             <br />Wolfram Research (June 2021 - July 2021)<br />
