updated research section on Master's project

--- a/index.html
+++ b/index.html
@@ -115,7 +115,10 @@
                         <strong>Research</strong>
                    
                         <p> <br />
-                            Quantum Error Correcting Codes in Topological Time Crystals<br/>
+                            Non-Hermitian Topological Discrete Time Crystals<br/>
+                            <br/>
+                            Literature review: On the potential of Topological Time
+                            Crystals for Quantum Error Correction<br/>
                             <br/>
                             Quantum Modelling, Simulations and Algorithms for Biological systems<br/>
                             <br/>
@@ -123,7 +126,7 @@
                             <br />
                             Q-Wave: Simulating sound waves using Quantum Algorithms<br />
                             <br />
-                            Classifying Topological Phases of Quantum Matter using Tensor Networks<br />
+                            Literature review: Classifying Topological Phases of Quantum Matter using Tensor Networks<br />
                             <br />
                             Topological Phase Transition in S=1/2 spin chains with alternating ferromagnetic (FM) and antiferromagnetic </br>(AFM) couplings and exchange anisotropy<br />
                             <br />
