--- a/research.html
+++ b/research.html
@@ -95,14 +95,31 @@
                             <p class = "bodytxt"> 
                                 Supervisor: <a href="https://arijeet1.wixsite.com/arijeetpal"> Dr. Arijeet Pal</a> </br></br>
                             
-                            <u>Dissertation title </title></u>: Non-Hermitian Discrete Time Crystals in 1D </br> 
+                            <u>Dissertation title </title></u>: Topological Edge Modes in Non-Hermitian 1D Fermionic Spin Chains </br> 
 
-                            Project Brief:</br> 
+                            Abstract:</br> 
                         
-                            This research project aims to study non-hermitian quantum dynamics of a periodically-driven 1D spin-1/2 chain.
-                            A 1D non-unitary Floquet transverse field ising model will be studied first. Then we will add disorder terms and YY nearest-neighbour interactions. 
-                            Subsequently, we will add asymmetric hopping terms to simulate non-hermiticity, as from the well-studied Hanato Nelson fermionic model.
-                            Details of the project will be updated in due course.
+                            Quantum computers have huge potential to help humanity solve real world problems
+as they have great promises to be much more efficient than classical computers. Therefore, quantum computation has been an active area of research worldwide, striving
+to build the perfect fault-tolerant quantum computer. The major setback to this is
+that qubits as quantum systems are vulnerable to thermalisation and decoherence.
+There has been great success in using quantum error correction to account for such
+errors. In this work, we aim to improve qubits by focusing on the problem with
+decoherence, which can be realistically modelled by non-Hermitian, open system dynamics. More specifically, qubits can exist in edge modes in quantum spin systems.
+In 1D Hermitian systems, edge states are protected by the systems' intrinsic symmetries and such states are deemed to be Symmetrically Protected Topological (SPT)
+phases. In non-Hermitian cases in 1D, richer topological phases can be recognized
+and explored. Two 1D fermionic non-Hermitian models have been investigated in this
+thesis: the 1D Floquet transverse field Ising (F-TFI) model and the Hatano-Nelson
+model with XY interactions (XYHN) with on-site disorder. In these non-Hermitian
+models, edge states with purely real energies are present with certain protections.
+More interestingly, the edge modes in the XYHN model persist and are more localized in the presence of disorder, showing the non-Hermitian skin effect. This work
+has great implications as it grants more knowledge on non-Hermitian dynamics in
+spin systems, which can be adapted and applied to real-world quantum technology
+purposes. For example, the protected edge states can not only be a perfect candidate
+for qubits in quantum computers, but also a good resource for more efficient storage
+of information. At the end of the report, potential future work will be suggested for
+further improvements and extensions, ending with a conclusion.
+
                             </br> 
 
                             </br>
