--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         <strong>Education</strong>
                         <br /><br />
                         <p class = "bodytxt"> 
-                            (Sept 2022 - Present) <a href= "https://www.ucl.ac.uk/" target="_blank">University College London (UCL)</a><br />
+                            (Sept 2022 - Sept 2023) <a href= "https://www.ucl.ac.uk/" target="_blank">University College London (UCL)</a><br />
                             MSc Physics
                             <br /> <br />
                             (2019 - 2022) <a href= "https://www.ucl.ac.uk/" target="_blank">UCL</a><br />
