--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <td width="14" height="30"><a href="notes.html">Notes</a></td>
             </tr> -->
             <tr border="1">
-            <td width="14" height="30" ><a href="CV_PakToLau_main.pdf">My CV</a></td>    
+            <!-- <td width="14" height="30" ><a href="CV_PakToLau_main.pdf">My CV</a></td>     -->
                 <!-- <td width="14" height="30"><a href="teaching.html">Teaching & Tutoring</a></td> -->
             </tr>
         </table>
@@ -80,7 +80,8 @@
     <table width="800" border="0" hspace = "10" cellpadding="0" cellspacing="0" bgcolor="#EEF5FD">
         <h5>TLDR</h5> 
             <p>
-                I am currently a Masters student in Physics and a recent Natural Sciences graduate (Physics & Physical Chemistry) at University College London (UCL).
+                I am a graduated Masters student in Physics and a recent Natural Sciences graduate (Physics & Physical Chemistry) at University College London (UCL).
+    
                 <br /> <br />
                 
             </p>
@@ -161,7 +162,7 @@
 
                     <strong>Quantum Technologies/Platforms</strong>
                     <p><br />
-                        Qiskit, QASM 2.0, IBM Quantum Composer, IBM Quantum Lab, D-Wave Leap (Quantum Annealer)
+                        Qiskit, QASM 2.0, IBM Quantum Composer, IBM Quantum Lab
                     </p>
                     <br />
 
