--- a/research.html
+++ b/research.html
@@ -55,7 +55,7 @@
                 <td width="14" height="30"><a href="notes.html">Notes</a></td>
                 </tr> -->
                 <tr border="1">
-                <td width="14" height="30" ><a href="CV_PakToLau_main.pdf">My CV</a></td>    
+                <!-- <td width="14" height="30" ><a href="CV_PakToLau_main.pdf">My CV</a></td>     -->
                     <!-- <td width="14" height="30"><a href="teaching.html">Teaching & Tutoring</a></td> -->
                 </tr>
             </table>
@@ -82,7 +82,7 @@
                 <tr>
                 <td valign="top"> 
                     <table width="900" height="auto" border="0">
-                            <h3>Non-Hermitian Discrete Time Crystals in 1D </h3> 
+                            <h3>Topological Edge Modes in Non-Hermitian 1D Fermionic Spin Chains </h3> 
                             
                             <br />
                             A master's project on theoretical condensed matter and quantum technologies.
