--- a/competition.html
+++ b/competition.html
@@ -55,7 +55,7 @@
                 <td width="14" height="30"><a href="notes.html">Notes</a></td>
                 </tr> -->
                 <tr border="1">
-                <td width="14" height="30" ><a href="./CV_PakToLau_main.pdf">My CV</a></td>    
+                <!-- <td width="14" height="30" ><a href="./CV_PakToLau_main.pdf">My CV</a></td>     -->
                     <!-- <td width="14" height="30"><a href="teaching.html">Teaching & Tutoring</a></td> -->
                 </tr>
             </table>
