--- a/research.html
+++ b/research.html
@@ -126,27 +126,19 @@ further improvements and extensions, ending with a conclusion.
                             <u>Literature Review</u>: On the potential of Topological Time Crystals for Quantum Error Correction </br> 
 
                             Review Brief:</br> 
-                                Since the 1980s, it has been speculated that quantum computers can be used to simulate
-                                systems, solving physics and chemistry problems. With the impressive works in recent
-                                years, theoretical, computational and experimental techniques have been developed, all in
-                                the hopes of reaching quantum “supremacy”. Still, there are engineering and theoretical
-                                challenges in building a scalable fault tolerant quantum computer, as quantum states in its
-                                processors are vulnerable to noises and decoherence. Error correction codes can help protecting information loss and performing error-free computation, with the toric code as the most
-                                well-known examples. Being robust to perturbations, the toric code is a 2D topologically
-                                ordered quantum matter. We extend this idea to another type of exotic phases of matter,
-                                known as time crystals. First proposed by Frank Wilczek, time crystals are periodically
-                                driven systems which break continuous time symmetry rather than translational symmetry
-                                in classical cases. Forming a dynamical phase of matter, time crystals are protected
-                                via many-body localisation. Recent works have shown that there exist topological time
-                                crystals. We look into the possibility that error correcting codes can be realised in such exotic
-                                systems which could be used for error correction. Moreover, quantum memory encoded in
-                                the system may be preserved via topological protection and many-body localisation. This
-                                work will introduce a novel solution to fault tolerant quantum computation and information processing. This has a huge implications in the quantum technology industry, as these
-                                fault tolerant quantum computers will help solve many problems much more efficiently that
-                                classical ones, such as optimisation problems, quantum machine learning, quantum
-                                chemistry, drug discovery many-body physics problems. </br> </br> 
-                                The project will include a model derivation and a quantum computational test on noise mitigation and error correction.
-                                A literature review and a dissertation will be written.
+                            Since the 1980s, it has been speculated that quantum computers can be used to simulate systems, solving physics and chemistry problems. 
+                            With the impressive works in recent years, theoretical, computational and experimental techniques have been developed, all in the hopes of 
+                            reaching quantum “supremacy”. Still, there are engineering and theoretical challenges in building a scalable fault tolerant quantum computer, 
+                            as quantum states in its processors are vulnerable to noises and decoherence. Error correction codes can help protecting information loss and 
+                            performing error-free computation, with the toric code as the most well-known examples. Being robust to perturbations, the toric code is a 2D 
+                            topologically ordered quantum matter. We extend this idea to another type of exotic phases of matter, known as time crystals. 
+                            First proposed by Frank Wilczek, time crystals are periodically driven systems which break continuous time symmetry rather than translational 
+                            symmetry in classical cases. Forming a dynamical phase of matter, time crystals are protected via many-body localisation. Recent works have 
+                            shown that there exist topological time crystals. We look into the possibility that error correcting codes can be realised in such exotic 
+                            systems which could be used for error correction. Moreover, quantum memory encoded in the system may be preserved via topological protection
+                            and many-body localisation. This literature review introduces a novel solution to fault-tolerant quantum computation and information processing.
+                            This has huge implications in the quantum technology industry, as these fault tolerant quantum computers will help solve many problems much 
+                            more efficiently than classical ones, such as optimisation problems, quantum machine learning, quantum chemistry, drug discovery many-body physics problems.
                             </br> 
                                 
 
@@ -162,7 +154,7 @@ further improvements and extensions, ending with a conclusion.
                     <table width="900" height="auto" border="0">
                             <h3>Quantum Simulations of Antigen-Antibody reactions </h3> 
                             <br />
-                            An interdisciplinary research project on bioinformatics, computational biophysics and quantum technologies, as a part of my research internship within the <a href="https://www.imperial.ac.uk/civil-engineering/">Faculty of Engineering, Department of Civil and Environmental Engineering</a>, Imperial College London.
+                            An interdisciplinary, consultancy-basedresearch project on bioinformatics, computational biophysics and quantum technologies, as a part of my research internship within the <a href="https://www.imperial.ac.uk/civil-engineering/">Faculty of Engineering, Department of Civil and Environmental Engineering</a>, Imperial College London.
                             <br /> <u>August 2022 - September 2022</u> <br/>
                             <p style="text-align:center;"><img src="./Research/antigen research/antigenantibody.png" alt="qtpt model" width = 50% ></p>
                             <p style="text-align:center;">Image from: Chang, T.-C., Wu, C.-C., Wang, S.-C., Chau, L.-K. &amp; Hsieh, W.-H. Using a fiber optic particle plasmon resonance biosensor to determine kinetic constants of antigen–antibody binding reaction. Analytical Chemistry 85, 245–250 (2012). 
@@ -171,7 +163,7 @@ further improvements and extensions, ending with a conclusion.
                                 Supervisor: <a href="https://www.imperial.ac.uk/people/po-heng.lee"> Dr Po-Heng (Henry) Lee</a> </br></br>
                                
                                 Project Brief:</br> 
-                                An exploratory project, assisting a company to understand the interactions between antigen-antibody reactions on a gold nanoparticle surface
+                                An exploratory and consulting project, assisting a company to understand the interactions between antigen-antibody reactions on a gold nanoparticle surface
                                 using density matrix methods. 
 
                             </p>
